fix(1034): fix firefox whitespace issues in build logs

--- a/app/components/build-log/styles.scss
+++ b/app/components/build-log/styles.scss
@@ -43,7 +43,6 @@
 .logs {
   font-size: 1em;
   font-family: monospace;
-  white-space: pre-line;
   background-color: #333;
   color: #eee;
   display: flex;
